@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
-<addon id='script.common.plugin.cache.beta' version='1.5.1' name='Common plugin cache Beta' provider-name='TheCollective'>
+<addon id="script.common.plugin.cache" name="Common plugin cache" provider-name="TheCollective" version="1.5.2">
   <requires>
-    <import addon='xbmc.python' version='2.1.0'/>
+    <import addon="xbmc.python" version="2.0" />
   </requires>
-  <extension point='xbmc.service' library='default.py' start='startup'>
+  <extension library="default.py" point="xbmc.service" start="startup">
   </extension>
-  <extension point='xbmc.addon.metadata'>
+  <extension point="xbmc.addon.metadata">
     <platform>all</platform>
-    <summary lang='en'>Common caching api for xbmc plugins.</summary>
+    <summary lang="en">Common caching api for xbmc plugins.</summary>
   </extension>
-  <extension point='xbmc.python.module' library='lib' />
+  <extension library="lib" point="xbmc.python.module" />
 </addon>
