@@ -5,6 +5,7 @@
   <category label="001">
     <setting id="debug" type="bool" label="002" default="false" />
     <setting id="autostart" type="bool" label="003" default="true" />
+    <setting id="port" type="number" label="005" default="59994" />
     <setting id="timeout" type="number" label="004" enable="!eq(-1,true)" default="15" />
   </category>
 </settings>
